# snake_multi

./: .gitignore  Makefile  README.md
snake_client/: Cargo.toml  README.md  log
snake_client/src/: client.rs  main.rs  piston.rs  server.rs  shared_structures.rs
snake_server/: Cargo.toml  log
snake_server/src/: game.rs  main.rs  shared_structures.rs  snake.rs
